--- a/index.html
+++ b/index.html
@@ -26,15 +26,7 @@
 
             <h3>Limit Columns</h3>
 
-            <thumbnail-list cols="2" cover max-height="200">
-                <img src="http://via.placeholder.com/500x500"/>
-                <img src="http://via.placeholder.com/500x500"/>
-                <img src="http://via.placeholder.com/500x500"/>
-                <img src="http://via.placeholder.com/500x500"/>
-                <img src="http://via.placeholder.com/500x500"/>
-                <img src="http://via.placeholder.com/500x500"/>
-                <img src="http://via.placeholder.com/500x500"/>
-                <img src="http://via.placeholder.com/500x500"/>
+            <thumbnail-list cover>
                 <img src="http://via.placeholder.com/500x500"/>
                 <img src="http://via.placeholder.com/500x500"/>
                 <img src="http://via.placeholder.com/500x500"/>
