pre-release commit

--- a/index.html
+++ b/index.html
@@ -11,25 +11,113 @@
         <form id="app" class="container">
             <h1 class="mb-5">thumbnail-list</h1>
 
-            <p>The thumbnail-list component is designed to be a fluid container for image thumnails. By default, the thumnails will flex to fit on one row.</p>
+            <p>The thumbnail-list component is designed to be a fluid container for thumbnail images. By default, the thumbnails will flex to fit on one row. This component as provides sensible defaults for grid styles as well.</p>
 
-            <!--
             <thumbnail-list>
-                <img src="http://via.placeholder.com/500x500" width="500"/>
-                <img src="http://via.placeholder.com/500x500" width="500"/>
-                <img src="http://via.placeholder.com/500x500" width="500"/>
-                <img src="http://via.placeholder.com/500x500" width="500"/>
-                <img src="http://via.placeholder.com/500x500" width="500"/>
-                <img src="http://via.placeholder.com/500x500" width="500"/>
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
             </thumbnail-list>
-        -->
 
-            <h3>Limit Columns</h3>
+            <hr>
 
-            <thumbnail-list cover>
-                <img src="http://via.placeholder.com/500x500"/>
-                <img src="http://via.placeholder.com/500x500"/>
-                <img src="http://via.placeholder.com/500x500"/>
+            <h3>Wrap the thumbnails.</h3>
+
+            <thumbnail-list wrap>
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+            </thumbnail-list>
+
+            <hr>
+
+            <h3>Constrain list by a max width.</h3>
+
+            <p>Max width of 300px</p>
+
+            <thumbnail-list max-width="300">
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+            </thumbnail-list>
+
+            <p class="mt-3">Or constrain the list by a min width.</p>
+
+            <thumbnail-list min-width="300">
+                <img src="http://via.placeholder.com/50x50" />
+                <img src="http://via.placeholder.com/50x50" />
+                <img src="http://via.placeholder.com/50x50" />
+            </thumbnail-list>
+            
+            <p class="mt-3">Fill the images if it is smaller than the container</p>
+
+            <thumbnail-list width="200" fill>
+                <img src="http://via.placeholder.com/50x50" />
+                <img src="http://via.placeholder.com/250x250" />
+                <img src="http://via.placeholder.com/100x100" />
+            </thumbnail-list>
+
+            <hr>
+
+            <h3>Grid of thumbnails.</h3>
+
+            <p class="mt-3">
+                Define the number of cols.
+            </p>
+
+            <thumbnail-list grid cols="5">
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+            </thumbnail-list>
+
+            <p class="mt-3">
+                Or define the number of rows.
+            </p>
+
+            <thumbnail-list grid rows="2">
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
+                <img src="http://via.placeholder.com/500x500" />
             </thumbnail-list>
         </form>
 
@@ -40,12 +128,6 @@
                 el: '#app',
                 components: {
                     ThumbnailList
-                },
-                data() {
-                    return {
-                        showActivity: false,
-                        value: null
-                    };
                 }
             });
         </script>
