pre-release commit

--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
                 <img src="http://via.placeholder.com/100x100" />
                 <img src="http://via.placeholder.com/100x100" />
                 <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
+                <img src="http://via.placeholder.com/100x100" />
             </thumbnail-list>
 
             <hr>
@@ -70,9 +78,9 @@
                 <img src="http://via.placeholder.com/50x50" />
             </thumbnail-list>
             
-            <p class="mt-3">Fill the images if it is smaller than the container</p>
+            <p class="mt-3">Cover the images if it is smaller than the container</p>
 
-            <thumbnail-list width="200" fill>
+            <thumbnail-list width="200" cover>
                 <img src="http://via.placeholder.com/50x50" />
                 <img src="http://via.placeholder.com/250x250" />
                 <img src="http://via.placeholder.com/100x100" />
@@ -103,21 +111,24 @@
             </p>
 
             <thumbnail-list grid rows="2">
-                <img src="http://via.placeholder.com/500x500" />
-                <img src="http://via.placeholder.com/500x500" />
-                <img src="http://via.placeholder.com/500x500" />
-                <img src="http://via.placeholder.com/500x500" />
-                <img src="http://via.placeholder.com/500x500" />
-                <img src="http://via.placeholder.com/500x500" />
-                <img src="http://via.placeholder.com/500x500" />
-                <img src="http://via.placeholder.com/500x500" />
-                <img src="http://via.placeholder.com/500x500" />
-                <img src="http://via.placeholder.com/500x500" />
-                <img src="http://via.placeholder.com/500x500" />
-                <img src="http://via.placeholder.com/500x500" />
-                <img src="http://via.placeholder.com/500x500" />
-                <img src="http://via.placeholder.com/500x500" />
-                <img src="http://via.placeholder.com/500x500" />
+                <div>
+                    <img src="http://via.placeholder.com/500x500" />
+                </div>
+                <div>
+                    <img src="http://via.placeholder.com/500x500" />
+                </div>
+                <div>
+                    <img src="http://via.placeholder.com/500x500" />
+                </div>
+                <div>
+                    <img src="http://via.placeholder.com/500x500" />
+                </div>
+                <div>
+                    <img src="http://via.placeholder.com/500x500" />
+                </div>
+                <div>
+                    <img src="http://via.placeholder.com/500x500" />
+                </div>
             </thumbnail-list>
         </form>
 
